--- a/DjangoWebProject2/app/templates/app/layout.html
+++ b/DjangoWebProject2/app/templates/app/layout.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html>
+﻿<!DOCTYPE html>
+<html="ja">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }} - My Django Application</title>
+    <title>{{ title }} - My Django アプリ</title>
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
@@ -46,4 +46,4 @@
 {% block scripts %}{% endblock %}
 
 </body>
-</html>
+</html="ja">
